--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,10 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://username:password@cluster0.xxxx.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=jhjdshkjhdskjds
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=ksjdkljdskjdsklhkl
+REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
